<resources>
    <string name="app_name">Animais</string>

    <!-- Rótulo para opção de menu flutuante que insere dados falsos de animais de estimação no aplicativo [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Rótulo para opção de menu flutuante que exclui todos os dados do animal de estimação no aplicativo [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Pets</string>

    <!-- Título da atividade para adicionar um novo animal de estimação [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Pet</string>

    <!-- Título da atividade para editar um animal de estimação [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_pet">Edit pet</string>

    <!-- Rótulo para opção de menu do editor para salvar animal de estimação e sair do editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Rótulo para a opção de menu flutuante do editor que exclui o animal de estimação atual [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Rótulo para categoria de visão geral dos atributos no editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Rótulo para informações de gênero no editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Rótulo para informações de medição no editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Dica de texto para o campo de nome no editor [CHAR LIMIT=30] -->
    <string name="hint_pet_name">Name</string>

    <!-- Dica de texto para o campo de raça no editor [CHAR LIMIT=30] -->
    <string name="hint_pet_breed">Breed</string>

    <!-- Dica de texto para o campo de nome no editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Unidades de peso do animal (quilogramas) [CHAR LIMIT=5] -->
    <string name="unit_pet_weight">kg</string>

    <!-- Rótulo para a opção do menu suspenso se o sexo do animal for desconhecido [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Rótulo para a opção do menu suspenso se o animal de estimação for macho [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Rótulo para a opção do menu suspenso se o animal de estimação for do sexo feminino [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <!-- Mensagem Toast no editor quando um novo pet foi inserido com sucesso [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_successful">Pet saved</string>

    <!-- Mensagem Toast no editor quando um novo pet falhou em ser inserido [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_failed">Error with saving pet</string>

    <!-- Texto do título para a view vazia, que descreve a imagem vazia da casa de cachorro [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Texto de legenda para a view vazia, que solicita que o usuário adicione um pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a pet</string>
    <string name="editor_update_pet_successful">Pet atualizado</string>
    <string name="editor_update_pet_failed">Erro ao atualizar pet</string>

    <!-- Mensagem de caixa de diálogo de quando o usuário está saindo do editor, mas não salvou as alterações [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Pet deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_breed">Unknown breed</string>

    <!-- Texto de botão de diálogo para a opção de descartar uma alteração do usuário [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Texto de botão de diálogo para a opção de continuar editando o pet atual [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

</resources>